Fix display bug that cause option on mobile not align properly

--- a/components/pages/TablePage/components/NavbarTop/NavbarTop.module.css
+++ b/components/pages/TablePage/components/NavbarTop/NavbarTop.module.css
@@ -120,6 +120,7 @@
     margin-left: 5px;
     z-index: -1;
     pointer-events: none;
+    margin-right: 0;
 }
 
 .logout a {
@@ -128,6 +129,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    margin-right: 6px;
 }
 
 .header li {
